Finished setting up Google Auth

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,3 +2,11 @@
 @import "./shadcnui.css";
 @import "./custom/_index.css";
 
+.not-found {
+    text-align: center;
+}
+
+.not-found a {
+    color: #4979ff;
+    text-decoration: underline;
+}
